# meli_challenge

./: README.md
Desafio1/: generate_data.ipynb  gpt2_database_4k.parquet  gpt2_generated_combined_local.parquet  pyproject.toml  training-classes-2.ipynb  training-classes.ipynb
Desafio2/: desafio_2.ipynb  pyproject.toml  sales_ml.csv
