[tool.poetry]
name = "Desafio1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
datasets = "^3.3.0"
torch = "^2.6.0"
numpy = "^2.2.3"
scikit-learn = "^1.6.1"
transformers = "^4.48.3"
jupyter = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
